@@ -23,6 +23,13 @@ app_confbridge
    characters like CR, LF, Tab, and a few others escaped.  However, an empty
    CallerIDName is now output as "<unknown>" instead of "<no name>".
 
+res_pjsip_transport_management
+------------------
+ * Since res_pjsip_transport_management provides several attack
+   mitigation features, its functionality moved to res_pjsip and
+   this module has been removed.  This way the features will always
+   be available if res_pjsip is loaded.
+
 ------------------------------------------------------------------------------
 --- Functionality changes from Asterisk 13.17.0 to Asterisk 13.18.0 ----------
 ------------------------------------------------------------------------------
